data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3910.wast
;; 9. **Test Case 9**:    - **Description**: Develop a module with a series of nested label definitions where `call_indirect` is executed. Use a mix of loops and conditional exits, with `br` targeting intermediate labels ensuring correct depth resolution for targeting the correct function.    - **Constraint Checked**: Accurate midpoint resolution in branching.    - **Incorrect Branch Target Resolution**: Confirms that `br` instruction intellect resolves nested intermediate labels accurately for correct intermediate function calling.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param i32) (result i32) (i32.const 10))
    (func $nested-call-indirect
      (block $block1
        (loop $loop1
          (block $block2
            (br_if $block1 (i32.eqz (i32.const 0)))
            (call_indirect (type 0) (i32.const 0))
            (br $loop1)
          )
        )
      )
    )
  )
  "type mismatch"
)